ref #1 added github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "calculator-k12",
   "version": "0.1.0",
+  "homepage": "https://samnoon1971.github.io/calculator-k12/",
   "private": true,
   "dependencies": {
     "@anatoliygatt/dark-mode-toggle": "^1.0.1",
@@ -13,6 +14,8 @@
     "react-scripts": "0.9.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -23,5 +26,8 @@
     "build:test": "NODE_ENV=test react-scripts build",
     "test:test": "NODE_ENV=test react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
